fixed issue with background not being visible in navbar. Added styling to active/hover of buttons/links. Added capability to open new window when footer icons are clicked

--- a/public/index.css
+++ b/public/index.css
@@ -16,25 +16,19 @@ body {
 }
 
 
-
-
-
-/* #backgroundImage {
-  position: fixed;
-} */
-
 /*NAVBAR*/
 
 #navbar {
   font-family: "Poller One", Arial, sans-serif;
   max-height: 10%;
   min-height: 50px;
-  background-color: rgba(12, 54, 32, 0.452);
+  width:100vw;
+  background-color: rgba(245, 245, 245, 0.342);
   backdrop-filter: blur(5px);
-
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  position: fixed;
 }
 
 
@@ -59,7 +53,14 @@ body {
 #homeLink:hover,
 #aboutLink:hover,
 #portfolioLink:hover {
-  color:white;
+  color:rgba(10, 47, 31, 0.971);
+  filter:brightness(250%);
+}
+
+#homeLink:active,
+#aboutLink:active,
+#portfolioLink:active {
+  transform: translate(0, 0.1rem);
 }
 
 #portfolioLink {
@@ -77,11 +78,11 @@ body {
 #home {
   
   background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 15px;
+  border-radius: 10px;
   /* border: 5px solid black; */
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
-  border: 2px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.107);
   margin-top: 15%;
   display: flex;
   flex-direction: column;
@@ -129,7 +130,7 @@ body {
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(245, 245, 245, 0.342);
   backdrop-filter: blur(5px);
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
@@ -167,8 +168,8 @@ body {
 #langIcons {
   /* background-color: rgba(107, 164, 110, 0.437); */
   padding:4px;
-  backdrop-filter: blur(5px);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  /* backdrop-filter: blur(5px);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); */
   /* border: 2px solid rgba(255, 255, 255, 0.3); */
   border-radius: 15px;
   align-self: center;
@@ -181,6 +182,9 @@ body {
 
 #logoIcons {
   height: 85px;
+}
+a:active {
+  transform: translate(0, 0.1rem);
 }
 
 /* PORTFOLIO PAGE */
